feat: added concierge-servic firest screen

--- a/src/app/pages/10-property-management/components/1-property-management-first-screen/property-management-first-screen.component.html
+++ b/src/app/pages/10-property-management/components/1-property-management-first-screen/property-management-first-screen.component.html
@@ -1,7 +1,7 @@
 <div class="property__first">
     <div class="property__first_wrapper">
         <div class="container">
-            <app-crumbs [current]="current"></app-crumbs>
+            <app-crumbs [current]="currentCrumbsTitle"></app-crumbs>
 
             <h1 class="property__first_title">
                 Передайте недвижимость во Франции нам в управление
