--- a/src/app/pages/2-all-objects/components/1-objects-first-screen/objects-first-screen.component.html
+++ b/src/app/pages/2-all-objects/components/1-objects-first-screen/objects-first-screen.component.html
@@ -1,7 +1,7 @@
 <div class="objects__first">
     <div class="objects__first_wrapper">
         <div class="container">
-            <app-crumbs [current]="'Все объекты'"></app-crumbs>
+            <app-crumbs [current]="currentCrumbsTitle"></app-crumbs>
 
             <h1 class="objects__first_title">Доступные объекты</h1>
 
