--- a/src/app/pages/4-rent/components/1-rent-first-screen/rent-first-screen.component.html
+++ b/src/app/pages/4-rent/components/1-rent-first-screen/rent-first-screen.component.html
@@ -1,6 +1,6 @@
 <div class="rent__first">
     <div class="container">
-        <app-crumbs [current]="current"></app-crumbs>
+        <app-crumbs [current]="currentCrumbsTitle"></app-crumbs>
 
         <div class="rent__first__title">
             <div class="rent__first__title_first">
