--- a/src/app/pages/7-buy-sell-rent/components/1-buy-sell-rent-first-screen/buy-sell-rent-first-screen.component.html
+++ b/src/app/pages/7-buy-sell-rent/components/1-buy-sell-rent-first-screen/buy-sell-rent-first-screen.component.html
@@ -1,7 +1,7 @@
 <div class="buySellRent__first">
     <div class="buySellRent__first_wrapper">
         <div class="container">
-            <app-crumbs [current]="current"></app-crumbs>
+            <app-crumbs [current]="currentCrumbsTitle"></app-crumbs>
 
             <h1 class="buySellRent__first_title">
                 Купить, продать, арендовать
