--- a/src/app/shared/components/detailed-page/components/1-detailed-first-screen/detailed-first-screen.component.html
+++ b/src/app/shared/components/detailed-page/components/1-detailed-first-screen/detailed-first-screen.component.html
@@ -6,7 +6,9 @@
     <div class="detailed__first_wrapper">
         <div class="container">
             <app-crumbs
-                [current]="data.sell ? 'Продажа' : 'Аренда'"
+                [current]="
+                    data.sell ? currentCrumbsTitleSell : currentCrumbsTitleRent
+                "
             ></app-crumbs>
             <div class="detailed__first_address">
                 <img src="assets/icons/pointer.svg" alt="Location address" />
