--- a/src/app/pages/3-sell/components/1-sell-first-screen/sell-first-screen.component.html
+++ b/src/app/pages/3-sell/components/1-sell-first-screen/sell-first-screen.component.html
@@ -1,6 +1,6 @@
 <div class="sell__first">
     <div class="container">
-        <app-crumbs [current]="'Объекты на продажу'"></app-crumbs>
+        <app-crumbs [current]="currentCrumbsTitle"></app-crumbs>
         <div class="sell__first_wrapper">
             <h1 class="sell__first_title">Объекты на продажу</h1>
             <div class="sell__first_title-circle">
