--- a/src/app/pages/11-concierge-service/concierge-service.component.html
+++ b/src/app/pages/11-concierge-service/concierge-service.component.html
@@ -1,3 +1,5 @@
 <section>
     <app-concierge-service-first-screen></app-concierge-service-first-screen>
+    <app-concierge-service-second-screen></app-concierge-service-second-screen>
+    <app-feedback [feedbackTextArea]="true" [feedbackTitle]="feedbackTitle"></app-feedback>
 </section>
