--- a/src/app/shared/components/feedback/feedback.component.html
+++ b/src/app/shared/components/feedback/feedback.component.html
@@ -6,7 +6,7 @@
         <div class="container">
             <p class="feedback__subtitle">Напишите нам или</p>
             <div class="feedback__title">
-                <h2>Оставьте свою заявку</h2>
+                <h2>{{ feedbackTitle }}</h2>
                 <div class="feedback__title_circle">
                     <app-logo-circle></app-logo-circle>
                 </div>
