--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -5,8 +5,9 @@
     height: 100%;
     background-color: var(--secondary-half);
     transform: translateX(100%);
-    transition: transform 0.3s ease;
+    transition: transform 0.5s ease;
     z-index: 10000;
+    user-select: none;
     & * {
         color: var(--menu-text);
         font-size: 20px;
