feat: added contact-with-us component

--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -2,3 +2,5 @@
 <app-menu [isOpen]="isOpen" (closeMenu)="toggleMenu()"></app-menu>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+
+<app-contact-with-us></app-contact-with-us>
