--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -83,6 +83,10 @@
         &_feedback {
             margin-top: 70px;
             cursor: pointer;
+            border: none;
+            background-color: transparent;
+            text-align-last: left;
+            width: max-content;
         }
     }
 }
