--- a/src/app/shared/components/not-found-page/not-found-page.component.html
+++ b/src/app/shared/components/not-found-page/not-found-page.component.html
@@ -1,17 +1,22 @@
 <app-header (openMenu)="toggleMenu()"></app-header>
 <app-menu [isOpen]="isOpen" (closeMenu)="toggleMenu()"></app-menu>
+<app-contact-with-us></app-contact-with-us>
 
 <div class="not__found">
-    <div class="container">
-        <div class="not__found_wrapper">
-            <h1 class="not__found_title">Извините, но страница не найдена</h1>
-            <div class="not__found_title-circle">
-                <app-logo-circle></app-logo-circle>
+    <div class="not__found_wrapper">
+        <div class="container">
+            <div class="not__found_top">
+                <h1 class="not__found_title">
+                    Извините, но страница не найдена
+                </h1>
+                <div class="not__found_title-circle">
+                    <app-logo-circle></app-logo-circle>
+                </div>
             </div>
+            <p class="not__found_subtitle">
+                но вы все ещё можете вернуться на
+                <a [routerLink]="'/'">главную страницу</a>
+            </p>
         </div>
-        <p class="not__found_subtitle">
-            но вы все ещё можете вернуться на
-            <a [routerLink]="'/'">главную страницу</a>
-        </p>
     </div>
 </div>
