--- a/src/app/shared/components/not-found-page/not-found-page.component.scss
+++ b/src/app/shared/components/not-found-page/not-found-page.component.scss
@@ -13,7 +13,16 @@
     background-position: center;
     background-size: cover;
     min-height: 100vh;
+
     &_wrapper {
+        background: linear-gradient(
+            270deg,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(0, 0, 0, 0.322) 70%
+        );
+    }
+
+    &_top {
         position: relative;
         width: max-content;
     }
