feat: added translation for join-gorm/contact-with-us components

--- a/src/app/shared/components/contact-with-us/contact-with-us.component.html
+++ b/src/app/shared/components/contact-with-us/contact-with-us.component.html
@@ -3,7 +3,7 @@
     [ngClass]="{ contact__active: contactWithUsService.isOpenContact }"
     (click)="onContactWithUsOverlayClick($event)"
 >
-    <div class="contact__wrapper">
+    <div class="contact__wrapper" *transloco="let t; read: 'contact_with_us'">
         <app-svg-close-button
             class="contact__close"
             (click)="contactWithUsService.toggleIsOpenContact()"
@@ -11,10 +11,12 @@
 
         <div class="contact__title_top">Azur Life</div>
 
-        <h2 class="contact__title">Свяжитесь с нами</h2>
+        <h2 class="contact__title">
+            {{ t("contact_title") }}
+        </h2>
 
         <p class="contact__subtitle">
-            Мы готовы ответить на возникающие вопросы о недвижимости
+            {{ t("contact_subtitle") }}
         </p>
 
         <app-join-form></app-join-form>
@@ -32,7 +34,9 @@
 
             <div class="contact__contacts_address">
                 <img src="assets/icons/pointer.svg" alt="Contact address" />
-                <span>Франция, бульвар Леклерк, 46, 06310, Болье-сюр-Мер</span>
+                <span>
+                    {{ t("contact_address") }}
+                </span>
             </div>
         </div>
     </div>
