--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -18,12 +18,8 @@
         </div>
     </div>
     <div class="header__menu">
-        <div class="header__menu_nav">
-            <a href="">en</a>
-            <a href="">fr</a>
-            <a href="">ru</a>
-            <a href="">it</a>
-        </div>
+        <app-language-switcher></app-language-switcher>
+
         <img
             src="assets/icons/menu_open.svg"
             alt="Burger menu open"
