--- a/src/app/shared/components/join-form/join-form.component.scss
+++ b/src/app/shared/components/join-form/join-form.component.scss
@@ -21,6 +21,7 @@
             padding: 1px 1px;
             font-size: 15px;
             height: max-content;
+            font-family: "Manrope";
             &::placeholder {
                 color: var(--primary-half);
             }
