--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -5,12 +5,7 @@
 >
     <div class="menu__wrapper">
         <div class="menu__header">
-            <div class="menu__header_nav">
-                <a href="">en</a>
-                <a href="">fr</a>
-                <a href="">ru</a>
-                <a href="">it</a>
-            </div>
+           <app-language-switcher></app-language-switcher>
 
             <app-svg-close-button
                 [color]="closeButtonColor"
