feat: added translation for home page

--- a/src/app/pages/0-home/components/1-home-first-screen/home-first.component.scss
+++ b/src/app/pages/0-home/components/1-home-first-screen/home-first.component.scss
@@ -43,8 +43,7 @@
             }
         }
         &_button {
-            width: 134px;
-            height: 57px;
+            padding: 17px;
             border-radius: 7px;
             background-color: var(--background-button);
             border: none;
