--- a/src/app/pages/10-property-management/components/2-property-management-second-screen/property-management-second-screen.component.html
+++ b/src/app/pages/10-property-management/components/2-property-management-second-screen/property-management-second-screen.component.html
@@ -1,5 +1,5 @@
 <div class="property__second">
-    <app-experience-block></app-experience-block>
+    <app-experience-block [subtitle]="subtitle"></app-experience-block>
 
     <div class="container">
         <app-property-concierge-wrapper
