--- a/src/app/pages/0-home/components/1-home-first-screen/home-first.component.html
+++ b/src/app/pages/0-home/components/1-home-first-screen/home-first.component.html
@@ -1,20 +1,20 @@
 <div class="home">
-    <div class="container">
-        <h1 class="home__title">
-            Подбор <br />
-            недвижимости <br />
-            с полным сопровождением на Вашем языке
-        </h1>
-        <p class="home__description">
-            Наше агентство специализируется на премиум объектах <br />
-            и презентует их Вам на русском языке. Подбор недвижимости <br />
-            во всей Франции с фокусом на самых привилегированных и живописных
-            районах Французского Средиземноморья - Ницца, Канны или Лазурный
-            Берег без лишних временных затрат и наценнок.
-        </p>
+    <div class="container" *transloco="let t; read: 'home_first'">
+        <h1 class="home__title" [innerHTML]="t('home_first_title')"></h1>
+        <p
+            class="home__description"
+            [innerHTML]="t('home_first_description')"
+        ></p>
         <div class="home__wrapper">
-            <a href="" class="home__wrapper_link">Скачать презентацию</a>
-            <button class="home__wrapper_button">Напишите нам</button>
+            <a href="" class="home__wrapper_link">
+                {{ t("home_first_presentation") }}
+            </a>
+            <button
+                class="home__wrapper_button"
+                (click)="contactWithUsService.toggleIsOpenContact()"
+            >
+                {{ t("home_first_contact") }}
+            </button>
         </div>
     </div>
 </div>
