--- a/src/app/pages/0-home/components/2-home-second-screen/home-second-screen.component.scss
+++ b/src/app/pages/0-home/components/2-home-second-screen/home-second-screen.component.scss
@@ -17,12 +17,13 @@
 
         &__left {
             position: relative;
-            width: 475px;
+            width: 490px;
             &_title {
                 margin-top: 92px;
                 font-size: 85px;
                 line-height: 90%;
                 letter-spacing: -1.7px;
+                position: relative;
             }
 
             &_subtitle {
@@ -33,6 +34,7 @@
             &_description {
                 margin-top: 55px;
                 line-height: 160%;
+                min-height: 145px;
             }
 
             &_experience {
@@ -40,23 +42,26 @@
             }
             &_link {
                 position: absolute;
-                top: 87px;
-                right: 60px;
+                top: 0;
+                left: 340px;
+                height: 22px;
                 text-decoration: none;
+                font-family: "Manrope";
+                line-height: normal;
+                letter-spacing: normal;
                 &:after {
                     content: "";
                     position: absolute;
                     height: 1px;
                     width: 100%;
-                    bottom: -5px;
+                    bottom: 0px;
                     left: 0;
                     background-color: var(--primary);
                 }
             }
             &_button {
                 margin-top: 45px;
-                width: 186px;
-                height: 57px;
+                padding: 16px 32px;
                 background-color: var(--button-background);
                 border: none;
                 border-radius: 7px;
