--- a/src/app/pages/0-home/components/5-home-fifth-screen/home-fifth-screen.component.html
+++ b/src/app/pages/0-home/components/5-home-fifth-screen/home-fifth-screen.component.html
@@ -1,36 +1,31 @@
 <div class="home__fifth">
-    <div class="container">
+    <div class="container" *transloco="let t; read: 'home_fifth'">
         <img
             src="assets/images/letters/ampersand.svg"
             alt="Ampersand"
             class="home__fifth_ampersand"
         />
         <div class="home__fifth_left">
-            <h2 class="home__fifth_left-title">Управление недвижимостью</h2>
-            <a class="home__fifth_left-link" href="#">Подробнее</a>
+            <h2 class="home__fifth_left-title">
+                {{ t("home_fifth_title_left") }}
+            </h2>
+            <a class="home__fifth_left-link" href="#">
+                {{ t("home_fifth_more") }}
+            </a>
+
             <p class="home__fifth_left-description">
-                Если Вы обладаете недвижимостью во Франции, мы станем
-                посредниками между Вами и делами, которыми Вы бы предпочли не
-                заниматься. Это возможно не только на этапе заключения сделки,
-                но и при дальнейшем управлении собственностью. Мы свяжемся с
-                ведомствами, налоговыми органами и операторами телефонной связи,
-                мы оплатим счета или представим Вас на ежегодном собрании
-                собственников. Мы возьмем на себя все дела, связанные с Вашим
-                личным присутствием и представим Вас везде, где это требуется.
-                Azur Life имеет все лицензии необходимые для этого.
+                {{ t("home_fifth_description_left") }}
             </p>
         </div>
         <div class="home__fifth_right">
-            <h2 class="home__fifth_right-title">Консьерж-сервис</h2>
-            <a class="home__fifth_right-link" href="#">Подробнее</a>
+            <h2 class="home__fifth_right-title">
+                {{ t("home_fifth_title_right") }}
+            </h2>
+            <a class="home__fifth_right-link" href="#">
+                {{ t("home_fifth_more") }}
+            </a>
             <p class="home__fifth_right-description">
-                Для тех, кто ценит своё время, мы предлагаем услуги
-                консьерж-сервиса: это настоящая забота о наших клиентах. Мы
-                организуем мероприятия, арендуем частные самолеты, яхты и
-                автомобили. Также мы забронируем отели, рестораны, закажем
-                трансфер или вызовем такси, найдём персонал для выбранной
-                недвижимости и сделаем это так, чтобы не отвлекать Вас от своих
-                дел.
+                {{ t("home_fifth_description_right") }}
             </p>
         </div>
     </div>
