--- a/src/app/pages/0-home/components/6-home-sixth-screen/home-sixth-screen.component.html
+++ b/src/app/pages/0-home/components/6-home-sixth-screen/home-sixth-screen.component.html
@@ -1,37 +1,26 @@
-<div class="home__sixth">
-    <h2 class="home__sixth-title">
-        Почему Azur Life <br />
-        Вам подходит
-    </h2>
+<div class="home__sixth" *transloco="let t; read: 'home_sixth'">
+    <h2 class="home__sixth-title" [innerHTML]="t('home_sixth_title')"></h2>
 
     <div class="container">
-        <img
-            src="assets/icons/diagonal_divider.svg"
-            alt="Diagonal divider"
-        />
+        <img src="assets/icons/diagonal_divider.svg" alt="Diagonal divider" />
 
         <div class="home__sixth_left home__sixth_item">
             <h2>100<span>%</span></h2>
             <p class="home__sixth_left-title">
-                экспертное сопровождение любой сделки
+                {{ t("home_title_left") }}
             </p>
             <p class="home__sixth_left-description">
-                Ваше спокойствие приоритетно для нас: мы имеем все необходимые
-                лицензии, страховые и финансовые гарантии, требуемые французским
-                законодательством, чтобы осуществлять сделки с недвижимостью.
+                {{ t("home_description_left") }}
             </p>
         </div>
 
         <div class="home__sixth_center home__sixth_item">
             <h2>100<span>%</span></h2>
             <p class="home__sixth_center-title">
-                база недвижимости из первых рук
+                {{ t("home_title_center") }}
             </p>
             <p class="home__sixth_center-description">
-                Azur Life является членом Национальной Федерации Агентов
-                Недвижимости (FNAIM) и имеет допуск к обширной базе объектов
-                недвижимости по всей Франции от собственников. Никаких комиссий
-                и переплат, только прямое взаимодействие с Azur Life.
+                {{ t("home_description_center") }}
             </p>
         </div>
 
@@ -39,10 +28,7 @@
             <h2>360<sup class="home__sixth_right-sup">o</sup></h2>
 
             <p class="home__sixth_right-description">
-                Консьерж сервис, аренда, экспертная оценка и управление
-                недвижимостью или купля и продажа ваших апартаментов - мы
-                сделаем всё, чтобы владение недвижимостью приносило только
-                удовольствие.
+                {{ t("home_description_right") }}
             </p>
         </div>
     </div>
